# CoinEM

./: .pre-commit-config.yaml  README.md  bayesian_logistic_regression.ipynb  bayesian_logistic_regression_autodiff.ipynb  bayesian_logistic_regression_new.ipynb  bayesian_neural_network.ipynb  coin_svgd_example.ipynb  example.ipynb  pyproject.toml
coinem/: __init__.py  dataset.py  expectation_maximisation.py  expectation_step.py  gradient_flow.py  gradient_transforms.py  gradients.py  kernels.py  likelihood.py  marginal_zoo.py  maximisation_step.py  model.py  network_expectation_maximisation.py  network_zoo.py  time_expectation_maximisation.py  time_zoo.py  utils.py  zoo.py
coinem/uci/: __init__.py
examples/: coin_svgd_example.ipynb
experiments/: README.md
experiments/latent_space_network/: latent_space_network.ipynb
experiments/toy_model/: toy_model.ipynb  toy_model_time_particles.ipynb
generator_network/: Tutorial.ipynb
generator_network/src/: models.py  (+1 more)
networks/: __init__.py  detection_limit.py  latent_space_network_model-alliances.ipynb  latent_space_network_model-got.ipynb  latent_space_network_model-monks.ipynb  load_alliances.py  load_got.py  load_monks.py  samples_generator.py
neurips_experiments/: bayes_lr_main.ipynb  bayes_nn_alternative.py  toy_model.ipynb
new_experiments/: bayesian_logistic_regression.ipynb  bayesian_logistic_regression_covertype.ipynb  bayesian_logistic_regression_wisconsin.ipynb  bayesian_neural_network.ipynb  bayesian_neural_network_boston.ipynb  bayesian_neural_network_mnist copy.ipynb  bayesian_neural_network_mnist.ipynb  bayesian_neural_network_mnist_refactor.ipynb  bayesian_nn_mnist.py  gplvm.ipynb  toy_hierarchical_model.ipynb
old_experiments/: bayesian_logistic_regression.ipynb  bayesian_neural_network.ipynb  toy_hierarchical_model.ipynb
tests/: test_gradient_flow.py  test_kernels.py  test_uci.py  test_utils.py
uci/: bayesian_neural_network_boston.ipynb  bnn.py
(+29 files in other folders)
