[tool.poetry]
name = "coinem"
version = "0.0.1"
description = "Coin EM"
authors = ["Anonymous"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jax = "==0.4.20"
jaxlib = "==0.4.20"
simple-pytree = "^0.1.7"
jaxtyping = "^0.2.14"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
tensorflow_probability = "^0.19.0"
distrax = "^0.1.3"
optax = "^0.1.9"
pandas = "^2.2.1"
networkx = "^3.2.1"
scikit-learn = "^1.4.1.post1"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
black = "23.1.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
pre-commit = "^3.2.2"
pytest-pretty = "^1.2.0"
pytest-xdist = "^3.2.1"
coverage = "^7.2.3"
absolufy-imports = "^0.3.1"
pylint = "^2.17.2"
nox = "^2022.11.21"
ruff = "^0.0.261"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]  # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 88
target-version = ["py38"]